--- a/deps/tools/rpiConfigServer_src/resources/index.html
+++ b/deps/tools/rpiConfigServer_src/resources/index.html
@@ -273,8 +273,14 @@
                       <div class="form-group">
                         <div class="custom-file">
                           <input type="file" class="custom-file-input cameraSettingsFile" accept=".json,text/json,application/json" id="cameraSettingsFileNEW">
-                          <label class="custom-file-label" for="cameraSettingsFileNEW">Load source config from JSON file</label>
+                          <label class="custom-file-label" for="cameraSettingsFileNEW">Load Source Config From JSON File</label>
                         </div>
+                      </div>
+                      <div class="form-group">
+                        <button class="btn btn-sm cameraCopyConfig" type="button">
+                          <span data-feather="copy"></span>
+                          Copy Source Config From Camera
+                        </button>
                       </div>
                       <div class="form-row">
                         <div class="form-group col-auto">
