Include git version information in webpage and /etc/rpi-issue
Fixes #95.

--- a/deps/tools/configServer/src/resources/index.html
+++ b/deps/tools/configServer/src/resources/index.html
@@ -474,6 +474,15 @@
         </div>
       </main>
     </div>
+    <footer class="app-footer">
+      <div>
+        <a href="http://wpilib.screenstepslive.com/s/currentCS/m/85074/l/1027798-the-raspberry-pi-frc-console" target="_new">FRCVision-rPi</a>
+        <span>&copy; 2019 FIRST</span>
+      </div>
+      <div class="ml-auto">
+        <a href="https://github.com/wpilibsuite/FRCVision-pi-gen/releases" target="_new">IMG_VERSION</a>
+      </div>
+    </footer>
 
     <script type="text/javascript" src="jquery-3.3.1.slim.min.js"></script>
     <script type="text/javascript" src="popper.min.js"></script>
