Improve file upload feedback
Display an alert on successful upload.
Change button text to "Upload and Save" when it's possible to upload.

Fixes #82.

--- a/deps/tools/configServer/src/resources/index.html
+++ b/deps/tools/configServer/src/resources/index.html
@@ -438,7 +438,7 @@
                   </div>
                   <button id="applicationSave" type="button" class="btn btn-primary" data-loading-text="<i class='spin' data-feather='loader'></i> Saving" disabled>
                     <span data-feather="save"></span>
-                    Save
+                    <span id="applicationSaveText">Save</span>
                   </button>
                 </form>
               </div>
