--- a/deps/tools/configServer/src/resources/index.html
+++ b/deps/tools/configServer/src/resources/index.html
@@ -308,6 +308,65 @@
               <div class="card-header">
                 <div class="row align-items-center">
                   <div class="col-auto mr-auto">
+                    <h6>IMU Calibration</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Most gyros will have some sort of zero offset. In order to
+                  get more accurate rate-of-turn readings, the gyro can be
+                  calibrated to calculate an appropriate zero offset.
+                </p>
+                <p class="card-text">
+                  To calibrate the gyro, place the Romi on a flat surface and
+                  click the "Calibrate Gyro" button. While the calibration is running,
+                  please do not touch the Romi.
+                </p>
+                <p class="card-text">Current Gyro Offsets</p>
+                <div class="row">
+                  <div class="col-sm-2">
+                    <div class="c-callout c-callout-info">
+                      <small class="text-muted">X Offset</small><br>
+                      <strong class="h5" id="romiCalibrationXValue"></strong>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="c-callout c-callout-info">
+                      <small class="text-muted">Y Offset</small><br>
+                      <strong class="h5" id="romiCalibrationYValue"></strong>
+                    </div>
+                  </div>
+                  <div class="col-sm-2">
+                    <div class="c-callout c-callout-info">
+                      <small class="text-muted">Z Offset</small><br>
+                      <strong class="h5" id="romiCalibrationZValue"></strong>
+                    </div>
+                  </div>
+                </div>
+                <p>&nbsp;</p>
+                <div id="romiCalibrationProgressGroup" class="progress-group" style="display:none">
+                  <div class="progress-group-header align-items-end">
+                    <div>Calibration Progress</div>
+                    <div id="romiCalibrationTimeLeft" class="ml-auto font-weight-bold mr-2">0 seconds left</div>
+                    <div id="romiCalibrationProgressPercent" class="text-muted small">(100%)</div>
+                  </div>
+                  <div class="progress-group-bars">
+                    <div class="progress progress-xs">
+                      <div id="romiCalibrationProgressBar" class="progress-bar bg-success" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                    </div>
+                  </div>
+                </div>
+                <button id="romiCalibrateButton" type="button" class="btn btn-primary" data-loading-text="<i class='spin' data-feather='loader'></i> Calibrating..." disabled>
+                  <span data-feather="refresh-cw"></span>
+                  <span>Calibrate Gyro</span>
+                </button>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <div class="row align-items-center">
+                  <div class="col-auto mr-auto">
                     <h6>Firmware</h6>
                   </div>
                 </div>
