--- a/deps/tools/configServer/src/resources/index.html
+++ b/deps/tools/configServer/src/resources/index.html
@@ -448,6 +448,7 @@
                   <div class="form-group">
                     <label for="wifiChannel">WiFi Channel</label>
                     <select class="form-control" id="wifiChannel">
+                      <option value="0">auto</option>
                       <option value="1">1</option>
                       <option value="2">2</option>
                       <option value="3">3</option>
@@ -457,6 +458,8 @@
                       <option value="7">7</option>
                       <option value="8">8</option>
                       <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">11</option>
                     </select>
                   </div>
                 </div>
