--- a/deps/tools/configServer/src/resources/index.html
+++ b/deps/tools/configServer/src/resources/index.html
@@ -516,6 +516,8 @@
                       <option value="7">7</option>
                       <option value="8">8</option>
                       <option value="9">9</option>
+                      <option value="10">10</option>
+                      <option value="11">11</option>
                     </select>
                   </div>
                 </div>
